--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -41,6 +41,9 @@
     font-size: 18px;
     color: #757575;
 }
+.text-center{
+    text-align: center;
+}
 
 /* header */
 .header{
@@ -112,13 +115,16 @@ main{
     margin: 0 auto;
 }
 
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 
 /* about */
 .about{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
 
 }
 .about-items{
@@ -129,4 +135,16 @@ main{
 .item-descrition{
     font-weight: 600;
     
+}
+
+/* skill section */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skil{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
