--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -148,3 +148,51 @@ main section{
     border-radius: 5px;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
+
+/* resume section */
+
+.resum-container{
+    display: flex;
+    gap: 24px;
+}
+
+.experience-sub-tite{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.experience-description, .experience-sub-tite{
+    color: #757575;
+    font-size:;
+}
+
+.resume hr{
+    margin: 30px 5px;
+}
+
+.resume-donload-cv{
+    margin-top: 50px;
+}
+
+/* footer */
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+}
+
+.footer-column{
+    width: 50%;
+}
+
+footer input[type="text"], input[type="email"], footer textarea{
+    height: 64px;
+    border-radius: 5px;
+    background-color: #ffffff;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
+}
